<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color">

    <EditText
        android:id="@+id/editText_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Quote Text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Author"
        app:layout_constraintTop_toBottomOf="@id/editText_quote"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Date"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/editText_author"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintTop_toBottomOf="@id/editText_date"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        app:layout_constraintTop_toBottomOf="@id/editText_date"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/discard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Discard"
        app:layout_constraintTop_toBottomOf="@id/editText_date"
        app:layout_constraintStart_toEndOf="@+id/button_save"
        app:layout_constraintEnd_toStartOf="@+id/button_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>